--- a/templates/educational.html
+++ b/templates/educational.html
@@ -14,9 +14,19 @@
             <li data-target="#waterCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#waterCarousel" data-slide-to="1"></li>
             <li data-target="#waterCarousel" data-slide-to="2"></li>
+            <li data-target="#waterCarousel" data-slide-to="3"></li>
         </ol>
         <div class="carousel-inner">
+            <!-- New First Item for Explaining Features -->
             <div class="carousel-item active">
+                <img src="{{ url_for('static', filename='images/bg.jpg') }}" class="d-block w-100" alt="Website Features">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Understanding Website Features</h5>
+                    <p>Get familiar with the words, symbols, and user affordances on our website to enhance your experience.</p>
+                </div>
+            </div>
+            <!-- Existing Items -->
+            <div class="carousel-item">
                 <img src="{{ url_for('static', filename='images/image1.jfif') }}" class="d-block w-100" alt="Illnesses">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Illnesses</h5>
@@ -49,7 +59,7 @@
     </div>
 </main>
 
-<!-- Include Bootstrap JS and dependencies -->
+<!-- Bootstrap JS and dependencies -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
