--- a/templates/beaches.html
+++ b/templates/beaches.html
@@ -319,7 +319,7 @@
                     <div class="card-content">
                         <h5>{{ favorite_beach.name }} ({{ favorite_beach.location }})</h5>
                         <strong>Grade:</strong> {{ favorite_beach.get('grade', 'N/A') }}<br />
-                        <strong>Entroccit Count:</strong> {{ favorite_beach.get('entrocciticount','N/A') }}<br />
+                        <strong>Entroccit Count:</strong> {{ favorite_beach.get('enterococcicount','N/A') }}<br />
                         <strong>Last Updated:</strong> {{ favorite_beach.get('date', 'N/A') }}<br />
                         <!-- Status Indicator -->
                         <div class="status">
@@ -368,7 +368,7 @@
                 <div class="card-content">
                     <h4>{{ beach.name }} ({{ beach.location }})</h4>
                     <strong>Grade:</strong> {{ beach.get('grade', 'N/A') }}<br />
-                    <strong>Entroccit Count:</strong> {{ beach.get('entrocciticount','N/A') }}<br />
+                    <strong>Entroccit Count:</strong> {{ beach.get('enterococcicount','N/A') }}<br />
                     <strong>Last Updated:</strong> {{ beach.get('date', 'N/A') }}<br />
                     <!-- Status Indicator -->
                     <div class="status">
