--- a/templates/home.html
+++ b/templates/home.html
@@ -85,7 +85,7 @@ block extra_css %}
         <h5 class="card-title">{{ beach.get('name', 'Unknown Beach') }}</h5>
         <p class="card-text">
           <strong>Grade:</strong> {{ beach.get('grade', 'N/A') }}<br />
-          <strong>Entroccit Count:</strong> {{ beach.get('entrocciticount',
+          <strong>Entroccit Count:</strong> {{ beach.get('enterococcicount',
           'N/A') }}<br />
           <strong>Last Updated:</strong> {{ beach.get('date', 'N/A') }}<br />
           <strong>Status:</strong>
