--- a/templates/manage_beaches.html
+++ b/templates/manage_beaches.html
@@ -22,7 +22,7 @@ block content %}
           <th>Grade</th>
           <th>Temperature</th>
           <th>Wind Speed</th>
-          <th>Wind Direction</th>
+          <th>Weather Description</th>
           <th>Status</th>
           <th>Actions</th>
         </tr>
@@ -33,11 +33,11 @@ block content %}
           <td>{{ beach.name }}</td>
           <td>{{ beach.date }}</td>
           <td>{{ beach.description }}</td>
-          <td>{{ beach.entrocciticount }}</td>
+          <td>{{ beach.enterococcicount }}</td>
           <td>{{ beach.grade }}</td>
           <td>{{ beach.temperature }}</td>
           <td>{{ beach.wind_speed }}</td>
-          <td>{{ beach.wind_direction }}</td>
+          <td>{{ beach.weather_description }}</td>
           <td>{{ beach.status }}</td>
           <td>
             <a
