--- a/templates/map.html
+++ b/templates/map.html
@@ -47,7 +47,7 @@
               <div class="card-content">
                   <h5>{{ beach.name }} ({{ beach.location }})</h5>
                   <strong>Grade:</strong> {{ beach.get('grade', 'N/A') }}<br />
-                  <strong>Entroccit Count:</strong> {{ beach.get('entrocciticount', 'N/A') }}<br />
+                  <strong>Entroccit Count:</strong> {{ beach.get('enterococcicount', 'N/A') }}<br />
                   <strong>Last Updated:</strong> {{ beach.get('date', 'N/A') }}<br />
                   
                   <!-- Status Indicator -->
