--- a/templates/add_beach.html
+++ b/templates/add_beach.html
@@ -47,12 +47,12 @@
       <input type="date" class="form-control" id="date" name="date" required />
     </div>
     <div class="form-group mt-3">
-      <label for="entrocciticount">Enterococci Count</label>
+      <label for="enterococcicount">Enterococci Count</label>
       <input
         type="text"
         class="form-control"
-        id="entrocciticount"
-        name="entrocciticount"
+        id="enterococcicount"
+        name="enterococcicount"
         required
       />
     </div>
