Fixed Some missing changes for weather_description
Some typos in variable names fixed

--- a/templates/add_beach.html
+++ b/templates/add_beach.html
@@ -97,12 +97,12 @@
       />
     </div>
     <div class="form-group mt-3">
-      <label for="wind_direction">Wind Direction</label>
+      <label for="wind_direction">Weather Description</label>
       <input
         type="text"
         class="form-control"
-        id="wind_direction"
-        name="wind_direction"
+        id="weather_description"
+        name="weather_description"
         required
       />
     </div>
