--- a/templates/beach_detail.html
+++ b/templates/beach_detail.html
@@ -61,7 +61,7 @@ block extra_css %}
         <!-- Real-time Weather Information -->
         <div class="weather-info">
           <p><i class="fa fa-thermometer-half"></i> {{ beach.temperature }}°C</p>
-          <p><i class="fa fa-cloud"></i> {{ beach.wind_direction }}</p>
+          <p><i class="fa fa-cloud"></i> {{ beach.weather_description }}</p>
           <p><i class="fa fa-wind"></i> {{ beach.wind_speed }} m/s</p>
           <a
           href="https://weather.com/en-ZA/weather/tenday/l/{{ beach.location_code }}"
