--- a/templates/edit_beach.html
+++ b/templates/edit_beach.html
@@ -45,8 +45,8 @@
       <input type="text" class="form-control" id="wind_speed" name="wind_speed" value="{{ beach.wind_speed }}" required>
     </div>
     <div class="form-group mt-3">
-      <label for="wind_direction">Wind Direction</label>
-      <input type="text" class="form-control" id="wind_direction" name="wind_direction" value="{{ beach.wind_direction }}" required>
+      <label for="weather_description">Weather Description</label>
+      <input type="text" class="form-control" id="weather_description" name="weather_description" value="{{ beach.weather_description }}" required>
     </div>
     <div class="form-group mt-3">
       <label for="status">Status</label>
